plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/misc/transitiveKmmLibraryThroughJava/m1-kt-mpp/src/commonMain/kotlin/MppCommon.kt
//region Test configuration
// - hidden: line markers
//endregion
object MppCommon

<!HIGHLIGHTING("severity='WARNING'; descr='[EXPECT_ACTUAL_CLASSIFIERS_ARE_IN_BETA_WARNING] 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. You can use -Xexpect-actual-classes flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573'")!>expect<!> class MppExpectActual
